products/dev-wallet/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-wallet
  namespace: dev-wallet
  labels:
    "app.kubernetes.io/name": "dev-wallet"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": "dev-wallet"
