products/dev-wallet/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-wallet
  namespace: dev-wallet
  labels:
    "app.kubernetes.io/name": "dev-wallet"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-wallet
                port:
                  number: 80
